# vai-core

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  _test_schema.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent_traces/: cycle_0001.json  cycle_0001_20260531T033638.json  cycle_0001_20260531T033652.json  cycle_0002.json  cycle_0003.json
config/: agents.yaml  config.yaml  default.json  llms.yaml  mcp_servers.yaml
config/agents/: agent-architect.yaml  agent-engineer.yaml  agent-pm.yaml  analyst-agent.yaml  assistant.yaml  billing-agent.yaml  default-agent.yaml  devsquad-interviewer.yaml  email-agent.yaml  executor-agent.yaml  help.yaml  multi-step.yaml  research-agent.yaml  router-agent.yaml  support-agent.yaml  tools-workflow.yaml  waiting-agent.yaml
config/councils/: dev-squad.yaml  devsquad-review.yaml  general-nominal.yaml
config/events/: devsquad-events.yaml
docs/: AUDIT_PASS2.md  architecture.json  architecture_audit.md
legacy/: corestep.py
tests/: test_agent_e2e.py  test_core_agent_config.py  test_core_agent_corestep.py  test_core_agent_isdone.py  test_core_agent_outcome.py  test_core_agent_runtime.py  test_core_agent_state.py  test_core_llm_deepseek_client.py  test_core_llm_transport.py  test_core_skills_validator.py  test_core_types_result.py  test_e2e.py  test_execution_engine.py  test_hot_reload.py  test_main.py  test_plugin_system.py
(+1664 files in other folders)
